<resources>
    <string name="app_name">MoodBook</string>

    <!-- Login Strings -->
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_DOB">Must be a valid date in the format DD/MM/YYYY</string>
    <string name="invalid_gender">Please choose a gender</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_profile">Profile</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="daily_quote">Daily Quote</string>
    <string name="push_notif">Push Notifications</string>
    <string name="bgm">BGM</string>
    <string name="change_profile">Change</string>
    <string name="email">user email</string>
    <string name="edit">Set</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="country">Country</string>
    <string name="password">password</string>
    <string name="email_fix">Email</string>
    <string name="dob_fix">Date of Birth</string>
    <string name="country_fix">Country</string>
    <string name="password_fix">Password</string>
    <string name="logout">logout</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="title_activity_register2">Sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">I don\'t have an account </string>
    <string name="sign_up_here">Sign up here</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MoodBook</string>
    <string name="nav_header_subtitle">emotions recollected in tranquillity</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_moodtracker">Mood tracker</string>
    <string name="menu_habitstracker">Habit tracker</string>
    <string name="menu_statistiche">Statistics</string>
    <string name="menu_ToDo">ToDo</string>
    <string name="menu_profilo">Profile</string>

    <!-- Strings related to habits -->
    <string name="habit_tracker">Habit Tracker</string>
    <string name="habit_yes">Button for when habit successfully done</string>
    <string name="habit_no">Button for when habit not successfully done</string>
    <string name="new_habit">New Habit</string>
    <string name="habit_name">New Habit Name</string>
    <string name="habit_end_date">Habit Tracking End Date</string>
    <string name="habit_frequency">Tracking Frequency</string>
    <string-array name="freq">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="add_new_habit">Track New Habit</string>
    <string name="home_title">Today</string>
    <string name="add_today_mood">add mood</string>
    <string name="today_add_habit">add new habit</string>
    <string name="last_mood">Your last mood</string>
    <string name="today_habits">your habits</string>
    <string name="today_tasks">your tasks</string>
    <string name="add_today_toDo">add new task</string>

    <!-- Strings related to moods -->
    <string name="happy">happy</string>
    <string name="neutral">neutral</string>
    <string name="depressed">depressed</string>
    <string name="angry">angry</string>
    <string name="sad">sad</string>
    <string name="anxious">anxious</string>
    <string name="sleepy">sleepy</string>

    <!-- Strings related to tasks -->
    <string name="your_tasks">your tasks</string>
    <string name="pending_tasks">Pending Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="delete_list">Delete List</string>
    <string name="emotions_recollected_in_tranquillity">emotions recollected in tranquillity</string>
    <string name="info">Info</string>
    <string name="task">Task:</string>
    <string name="finishing_date">Finishing Date:</string>
    <string name="starting_date">Starting Date:</string>

    <!-- Strings related to profile -->
    <string name="profile">Profile</string>
    <string name="touch_profile_picture_to_change">touch profile picture to change</string>
    <string name="name">name</string>
    <string name="gender">gender</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer_not_to_specify">Prefer not to specify</string>
    <string name="mood_title">Mood Tracker</string>
    <string name="no_blank_pages">Don\'t leave blank pages in your diary</string>
    <string name="add_habit">add_habit</string>
    <string name="enter_name">Enter Name</string>
    <string name="register">Register</string>
    <string name="log_new_mood">log new mood</string>
    <string name="your_mood_should_not_dictate_your_manners">Your mood should not dictate your manners</string>
    <string name="add_this_mood">Add this Mood</string>
    <string name="notes">Notes...</string>
    <string name="calendar">calendar</string>
    <string name="habit_quote">good habits lead to happiness</string>
    <string name="add_mood">add_mood</string>
    <string name="weekly">weekly</string>
    <string name="daily">daily</string>
    <string name="gender_">Gender:</string>
    <string name="country_">Country:</string>
    <string name="select_date">select date</string>
    <string name="confirm_password">confirm password</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="start_date">Starting date:</string>
    <string name="finish_date">Finishing date:</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="last_mood_emoji">last mood emoji</string>
    <string name="alarm_clock">alarm clock</string>
    <string name="target">target</string>
    <string name="delete">Delete</string>
    <string name="mark_as_completed">mark as completed</string>
    <string name="your_mood_trend">your_mood\'s_trend</string>
    <string name="how_are_u">How are you?</string>
    <string name="note_if_you_leave_any_field_blank_it_will_not_be_changed">*Note: If you leave any field blank, it will not be changed.</string>
    <string name="new_name">New Name</string>
    <string name="new_date_of_birth">New Date of Birth</string>
    <string name="new_country">New Country</string>
    <string name="non_hai_ancora_inserito_alcuna_emozione">Non hai ancora inserito alcuna emozione</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>