<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_moodtracker"
            android:icon="@drawable/ic_mood"
            android:title="@string/menu_moodtracker" />
        <item
            android:id="@+id/nav_Habits"
            android:icon="@drawable/ic_habits"
            android:title="@string/menu_habitstracker" />
        <item
            android:id="@+id/nav_ToDo"
            android:icon="@drawable/ic_todo"
            android:title="@string/menu_ToDo" />
        <item
            android:id="@+id/nav_Statistiche"
            android:icon="@drawable/ic_statistics"
            android:title="@string/menu_statistiche" />
        <item
            android:id="@+id/nav_profilo"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profilo" />
    </group>
</menu>