<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
android:layout_height="fill_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/header_violazzurro"
    >


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagetoupload"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="36dp"
        android:layout_marginStart="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/defaultprofile"></de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_profile_picture_to_change"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/ProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:gravity="bottom"
        android:layout_marginStart="24dp"
        android:text="@string/profile"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="20dp"
                android:contentDescription="@string/edit_profile"
                android:layout_marginEnd="14dp"
                android:background="@drawable/baseline_border_color_24"
                android:color="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dobLabel"
                android:layout_width="150dp"
                android:layout_marginHorizontal="5dp"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/dob_textview"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countryLabel"
                android:layout_width="150dp"
                android:layout_marginHorizontal="5dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/country"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/country_textview"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/genderlabel"
                android:layout_width="150dp"
                android:layout_marginHorizontal="5dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/gender"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/gender_textview"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="80dp">

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="260dp"
                android:backgroundTint="#0db9f2"
                android:text="@string/sign_out" />
        </LinearLayout>
    </LinearLayout>





</LinearLayout>
</ScrollView>