<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/sfondo_viola_azzurro"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/home_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@+id/scrollView_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:id="@+id/scrollView_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        app:layout_constraintTop_toTopOf="parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="8dp">



            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_mood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/last_mood"
                    android:textSize="20sp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp">

                    <ImageView
                        android:id="@+id/emoji"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="3"
                        android:orientation="vertical">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:textSize="16sp"
                        android:textAlignment="textStart"
                        android:textColor="#000C5D"/>
                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:textSize="15sp"
                        android:textAlignment="textStart"
                        android:textStyle="italic"
                        android:textColor="#000000"/>
                    </LinearLayout>
                </TableRow>
                <TextView
                    android:id="@+id/add_mood"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/add_today_mood"
                    android:gravity="end"
                    android:layout_margin="5dp"
                    android:textColor="@color/blue"
                    android:textSize="15sp" />

            </TableLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_mood"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="8dp">



            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_habit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/today_habits"
                    android:textSize="20sp" />

                <ListView
                    android:id="@+id/today_habit_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp">

                </ListView>


                <TextView
                    android:id="@+id/add_habit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/today_add_habit"
                    android:gravity="end"
                    android:textSize="15sp" />

            </TableLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_habits"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="8dp">



            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_toDo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/today_tasks"
                    android:textSize="20sp" />

                <ListView
                    android:id="@+id/today_tasks_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp">

                </ListView>


                <TextView
                    android:id="@+id/add_toDo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/add_today_toDo"
                    android:gravity="end"
                    android:textSize="15sp" />

            </TableLayout>
        </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>